- avoid the jumping lines

--- a/src/styles/jsTreeTheme.less
+++ b/src/styles/jsTreeTheme.less
@@ -24,13 +24,14 @@
 
 /* Styles for jsTree control */
 /* (these are based on jsTree's default theme .css file, so they are not very LESS-like) */
+@li-min-height: 22px;
 
 .jstree ul, .jstree li { display:block; margin:0 0 0 0; padding:0 0 0 0; list-style-type:none; }
-.jstree li { display:block; min-height:18px; line-height:16px; white-space:nowrap; margin-left:18px; min-width:18px; }
+.jstree li { display:block; min-height:@li-min-height; line-height:16px; white-space:nowrap; margin-left:18px; min-width:18px; }
 .jstree-rtl li { margin-left:0; margin-right:18px; }
 .jstree > ul > li { margin-left:0px; }
 .jstree-rtl > ul > li { margin-right:0px; }
-.jstree ins { display:inline-block; text-decoration:none; width:18px; height:18px; margin:0 0 0 0; padding:0; } + 
+.jstree ins { display:inline-block; text-decoration:none; width:18px; height:18px; margin:0 0 0 0; padding:0; } +
 .jstree a { display:inline-block; line-height:16px; height:16px; color:black; white-space:nowrap; text-decoration:none; padding:1px 2px; margin:0; }
 .jstree a:focus { outline: none; }
 .jstree a > ins { height:16px; width:16px; }
@@ -154,7 +155,7 @@ ins.jstree-icon {
     left: 3px !important;
     padding: 0;
     position: absolute;
-    top: 2px;
+    top: 4px;
     width: 150px;
     height: 16px;
     line-height: 16px;
